# farm

./: .gitignore  Dockerfile  README.docker.md  README.md  docker-compose.yml  init_db.py  loader.py  pyproject.toml
api/: __main__.py  config.py  dependencies.py  main.py  models.py  report.py  validation.py
api/routers/: cows.py  insights.py  load.py  measurements.py  reports.py  sensors.py
tests/: conftest.py  test_cow_endpoint.py  test_init_db.py  test_insights_endpoints.py  test_load_endpoints.py  test_loader.py  test_measurement_endpoint.py  test_measurement_loader.py  test_report.py  test_sensor_endpoint.py  test_sensor_loader.py
