[project]
name = "entrevista"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "uvicorn>=0.46.0",
    "pandas>=3.0.2",
    "pyarrow>=24.0.0",
    "httpx>=0.28.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
